--- a/src/02_containers/index.html
+++ b/src/02_containers/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1 class="text-4xl">Containers</h1>
-    <p class="container sm:bg-slate-400 md:bg-red-400 lg:bg-orange-400 xl:bg-amber-600 2xl:bg-yellow-400">Container color changes based on container size</p>
+    <p class="container bg-slate-400 sm:bg-slate-400 md:bg-red-400 lg:bg-orange-400 xl:bg-amber-600 2xl:bg-yellow-400">Container color changes based on container size</p>
 </body>
 </html>
